// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value=""
        />
      </div>
      <div
        aria-label="radioTabsField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_2"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 2
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > DisabledCompletely 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value=""
        />
      </div>
      <div
        aria-label="radioTabsField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-disabled="true"
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-disabled="true"
                  data-key="option_1"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-disabled="true"
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-disabled="true"
                  data-key="option_2"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 2
                  </div>
                </button>
                <button
                  aria-disabled="true"
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-disabled="true"
                  data-key="option_3"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > DisabledOption 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value=""
        />
      </div>
      <div
        aria-label="radioTabsField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-disabled="true"
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-disabled="true"
                  data-key="option_2"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    option 2
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > FullWidth 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value="option_1"
        />
      </div>
      <div
        aria-label="Radio Tabs Field"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <span
          class="relative mb-2 inline-flex text-sm text-foreground subpixel-antialiased group-data-[invalid=true]:text-danger"
        >
          <legend>
            Radio Tabs Field
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            class="w-full"
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-selected="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                    data-slot="cursor"
                    style="opacity: 1;"
                  />
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_2"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 2
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Invalid 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value="option_2"
        />
      </div>
      <div
        aria-describedby="react-aria-«replaced-aria-id»"
        aria-invalid="true"
        aria-label="Radio Tabs Field"
        aria-orientation="vertical"
        aria-required="true"
        class="relative flex flex-col group gap-0"
        data-invalid="true"
        data-required="true"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <span
          class="relative after:content-['*'] after:text-danger after:ml-0.5 mb-2 inline-flex text-sm text-foreground subpixel-antialiased group-data-[invalid=true]:text-danger"
        >
          <legend>
            Radio Tabs Field
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            class="rounded-medium border-2 !border-danger"
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-selected="true"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-focus="true"
                  data-hover="true"
                  data-key="option_2"
                  data-react-aria-pressable="true"
                  data-selected="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                    data-slot="cursor"
                    style="opacity: 1;"
                  />
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 2
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="text-tiny text-danger"
          id="react-aria-«replaced-aria-id»"
        >
          <ul
            aria-label="Validation errors of field radiotabsfield"
            data-testid="radiotabsfield_error"
          >
            <li
              style="overflow: hidden;"
            >
              <div
                class="px-1 pt-1"
              >
                Please use another option
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > InvalidWithContent 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value="option_2"
        />
      </div>
      <div
        aria-describedby="react-aria-«replaced-aria-id»"
        aria-invalid="true"
        aria-label="Select Your Plan"
        aria-orientation="vertical"
        aria-required="true"
        class="relative flex flex-col group gap-0"
        data-invalid="true"
        data-required="true"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <span
          class="relative after:content-['*'] after:text-danger after:ml-0.5 mb-2 inline-flex text-sm text-foreground subpixel-antialiased group-data-[invalid=true]:text-danger"
        >
          <legend>
            Select Your Plan
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            class="border-divider w-full rounded-medium border-2 !border-danger"
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full p-1"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Starter
                  </div>
                </button>
                <button
                  aria-controls="react-aria-«replaced-aria-id»-tabpanel-option_2"
                  aria-selected="true"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-focus="true"
                  data-hover="true"
                  data-key="option_2"
                  data-react-aria-pressable="true"
                  data-selected="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                    data-slot="cursor"
                    style="opacity: 1;"
                  />
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Pro
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Enterprise
                  </div>
                </button>
              </div>
            </div>
            <div
              aria-labelledby="react-aria-«replaced-aria-id»-tab-option_2"
              class="data-[inert=true]:hidden outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 p-3"
              data-focus="false"
              data-focus-visible="false"
              data-slot="panel"
              id="react-aria-«replaced-aria-id»-tabpanel-option_2"
              role="tabpanel"
              tabindex="0"
            >
              Great for growing teams and businesses.
            </div>
          </div>
        </div>
        <div
          class="text-tiny text-danger"
          id="react-aria-«replaced-aria-id»"
        >
          <ul
            aria-label="Validation errors of field radiotabsfield"
            data-testid="radiotabsfield_error"
          >
            <li
              style="overflow: hidden;"
            >
              <div
                class="px-1 pt-1"
              >
                This option is not allowed
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Required 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value=""
        />
      </div>
      <div
        aria-label="Radio Tabs Field"
        aria-orientation="vertical"
        aria-required="true"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="true"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <span
          class="relative after:content-['*'] after:text-danger after:ml-0.5 mb-2 inline-flex text-sm text-foreground subpixel-antialiased group-data-[invalid=true]:text-danger"
        >
          <legend>
            Radio Tabs Field
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_2"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 2
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithContent 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value="option_1"
        />
      </div>
      <div
        aria-label="radioTabsField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            class="rounded-medium border border-divider w-full"
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full p-1"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-controls="react-aria-«replaced-aria-id»-tabpanel-option_1"
                  aria-selected="true"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-selected="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                    data-slot="cursor"
                    style="opacity: 1;"
                  />
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_2"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 2
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
            <div
              aria-labelledby="react-aria-«replaced-aria-id»-tab-option_1"
              class="data-[inert=true]:hidden outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 p-3"
              data-focus="false"
              data-focus-visible="false"
              data-slot="panel"
              id="react-aria-«replaced-aria-id»-tabpanel-option_1"
              role="tabpanel"
              tabindex="0"
            >
              Option 1 Content
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithInitialValue 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          name="radioTabsField"
          value="option_2"
        />
      </div>
      <div
        aria-label="radioTabsField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radiotabsfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <div
            data-placement="top"
            data-slot="tabWrapper"
            data-vertical="horizontal"
          >
            <div
              class="inline-flex w-full"
              data-slot="base"
            >
              <div
                aria-orientation="horizontal"
                class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
                data-collection="react-aria-«replaced-aria-id»"
                data-slot="tabList"
                id="react-aria-«replaced-aria-id»"
                role="tablist"
              >
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_1"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_1"
                  id="react-aria-«replaced-aria-id»-tab-option_1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 1
                  </div>
                </button>
                <button
                  aria-selected="true"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_2"
                  data-react-aria-pressable="true"
                  data-selected="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_2"
                  id="react-aria-«replaced-aria-id»-tab-option_2"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                    data-slot="cursor"
                    style="opacity: 1;"
                  />
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 2
                  </div>
                </button>
                <button
                  aria-selected="false"
                  class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                  data-collection="react-aria-«replaced-aria-id»"
                  data-key="option_3"
                  data-react-aria-pressable="true"
                  data-slot="tab"
                  data-testid="radiotabsfield_option_option_3"
                  id="react-aria-«replaced-aria-id»-tab-option_3"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                    data-slot="tabContent"
                  >
                    Option 3
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
